# TraceAnalyser

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
src/GUI/: bleachwindow_gui.py  bleachwindow_gui.ui  correctionwindow_gui.py  cropwindow_gui.py  cropwindow_gui.ui  detectwindow_gui.py  exportsettings_gui.py  filterwindow_gui.py  fittingwindow_gui.py  fittingwindow_gui.ui  groupwindow_gui.py  groupwindow_gui.ui  importwindow_gui.py  importwindow_gui.ui  mainwindow_gui.py  mainwindow_gui.ui  managewindow_gui.py  plotsettings_gui.py  plotsettings_gui.ui  simulatorwindow_gui.py  smoothingwindow_gui.py
src/TraceAnalyser/: _version.py  main_window.py
src/TraceAnalyser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/TraceAnalyser/DeepFretSimulate/: math.py  simulate.py  simulation_test.py
src/TraceAnalyser/DeepLASI/: main.py  wrapper.py
src/TraceAnalyser/GUI/: __init__.py  analysis_gui.py  bleachwindow_gui.py  correctionwindow_gui.py  cropwindow_gui.py  cropwindow_gui.ui  detectwindow_gui.py  detectwindow_gui.ui  ebfret_utils.py  exportsettings2_gui.ui  exportsettings_gui.py  exportwindow_gui.py  filterwindow_gui.py  fittingwindow_gui.py  fittingwindow_gui.ui  groupwindow_gui.py  groupwindow_gui.ui  gui_HMM_utils.py  gui_analysis_plot_utils.py  gui_bleach_utils.py  gui_correction_utils.py  gui_deeplasi_utils.py  gui_detectcrop_utils.py  gui_ebfret_utils.py  gui_export_utils.py  gui_group_utils.py  gui_import_utils.py  gui_inceptiontime_utils.py  gui_layout.py  gui_management_utils.py  gui_measure_plot_utils.py  gui_simulation_utils.py  gui_smoothing_utils.py  gui_trace_plot_overlays.py  gui_trace_plot_utils.py  gui_windows.py  importwindow_gui.py  mainwindow_gui.py  managewindow_gui.py  managewindow_gui.ui  (+5 more)
src/TraceAnalyser/funcs/: ebfret_utils.py  gui_HMM_utils.py  gui_analysis_plot_utils.py  gui_bleach_utils.py  gui_correction_utils.py  gui_detectcrop_utils.py  gui_ebfret_utils.py  gui_export_utils.py  gui_group_utils.py  gui_import_utils.py  gui_inceptiontime_utils.py  gui_management_utils.py  gui_measure_plot_utils.py  gui_simulation_utils.py  gui_smoothing_utils.py  gui_trace_plot_overlays.py  gui_trace_plot_utils.py  gui_windows.py  gui_worker.py
(+30 files in other folders)
