[metadata]
name = TraceAnalyser

description = GapSeq Analysis for Gene Machines Group, Deparment of Physics, Oxford
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/piedrro/TraceAnalyser
author = Piers Turner
author_email = piers.turner@physics.ox.ac.uk
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/piedrro/TraceAnalyser/issues
    Documentation = https://github.com/piedrro/TraceAnalyser#README.md
    Source Code = https://github.com/piedrro/TraceAnalyser
    User Support = https://github.com/piedrro/TraceAnalyser/issues


[options]
packages = find:
install_requires =
    numpy
    qtpy
    scipy
    scikit-learn
    pymatreader
    pyqtgraph
    pomegranate==0.14.8
    pandas
    matplotlib
    scipy
    tqdm
    hmmlearn
    pyqtgraph
    originpro
    tensorflow[and-cuda]
    mat4py
    tsaug
    tensorboard
    parmap
    openpyxl
    retrying
    glob2
    pyqt5-tools
    torch
    tsai
    ipykernel

python_requires = >=3.9
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ebfret = TraceAnalyser.GUI.ebfret_utils:launch_ebfret_instance
    analysis = TraceAnalyser.GUI.analysis_gui:start_gui

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5

[options.package_data]
* = *.yaml


